fix: mobile flicker issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+
 html,
 body {
   max-width: 100vw;
@@ -5,7 +7,9 @@ body {
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
 }
 
 * {
@@ -30,4 +34,31 @@ a {
 
 .spin {
   animation: spin 1s linear infinite;
+}
+
+.dashboard-wrapper {
+  display: flex;
+  gap: 32px;
+  flex-wrap: wrap;
+  padding: 48px 120px;
+  flex: 1;
+
+  @media (max-width: 768px) {
+    padding: 48px 24px;
+    flex: unset;
+  }
+}
+
+.mobile-display-none {
+  @media (max-width: 768px) {
+    display: none;
+  }
+}
+
+.header-wrapper {
+  padding: 0 120px;
+
+  @media (max-width: 768px) {
+    padding: 0 16px;
+  }
 }
